--- a/Proyectos/Project_Music_DB/ventanas/ventana_listado.ui
+++ b/Proyectos/Project_Music_DB/ventanas/ventana_listado.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>Listado De Canciones</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: qconicalgradient(cx:0.5, cy:0.5, angle:0, stop:0 rgba(255, 235, 235, 206), stop:0.258706 rgba(255, 188, 188, 80), stop:0.425 rgba(255, 132, 132, 156), stop:0.44 rgba(252, 128, 128, 80), stop:0.507463 rgba(255, 162, 162, 80), stop:1 rgba(255, 255, 255, 0));</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <property name="styleSheet">
     <string notr="true"/>
