--- a/Proyectos/Project_Music_DB/ventanas/ventana_registro.ui
+++ b/Proyectos/Project_Music_DB/ventanas/ventana_registro.ui
@@ -466,99 +466,446 @@
     <palette>
      <active>
       <colorrole role="Button">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>247</red>
-         <green>225</green>
-         <blue>217</blue>
-        </color>
+       <brush brushstyle="ConicalGradientPattern">
+        <gradient centralx="0.500000000000000" centraly="0.500000000000000" angle="0.000000000000000" type="ConicalGradient" spread="PadSpread" coordinatemode="ObjectBoundingMode">
+         <gradientstop position="0.000000000000000">
+          <color alpha="206">
+           <red>255</red>
+           <green>235</green>
+           <blue>235</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.258706000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>188</green>
+           <blue>188</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.425000000000000">
+          <color alpha="156">
+           <red>255</red>
+           <green>132</green>
+           <blue>132</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.440000000000000">
+          <color alpha="80">
+           <red>252</red>
+           <green>128</green>
+           <blue>128</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.507463000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>162</green>
+           <blue>162</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="1.000000000000000">
+          <color alpha="0">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </gradientstop>
+        </gradient>
        </brush>
       </colorrole>
       <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>247</red>
-         <green>225</green>
-         <blue>217</blue>
-        </color>
+       <brush brushstyle="ConicalGradientPattern">
+        <gradient centralx="0.500000000000000" centraly="0.500000000000000" angle="0.000000000000000" type="ConicalGradient" spread="PadSpread" coordinatemode="ObjectBoundingMode">
+         <gradientstop position="0.000000000000000">
+          <color alpha="206">
+           <red>255</red>
+           <green>235</green>
+           <blue>235</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.258706000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>188</green>
+           <blue>188</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.425000000000000">
+          <color alpha="156">
+           <red>255</red>
+           <green>132</green>
+           <blue>132</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.440000000000000">
+          <color alpha="80">
+           <red>252</red>
+           <green>128</green>
+           <blue>128</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.507463000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>162</green>
+           <blue>162</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="1.000000000000000">
+          <color alpha="0">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </gradientstop>
+        </gradient>
        </brush>
       </colorrole>
       <colorrole role="Window">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>247</red>
-         <green>225</green>
-         <blue>217</blue>
-        </color>
+       <brush brushstyle="ConicalGradientPattern">
+        <gradient centralx="0.500000000000000" centraly="0.500000000000000" angle="0.000000000000000" type="ConicalGradient" spread="PadSpread" coordinatemode="ObjectBoundingMode">
+         <gradientstop position="0.000000000000000">
+          <color alpha="206">
+           <red>255</red>
+           <green>235</green>
+           <blue>235</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.258706000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>188</green>
+           <blue>188</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.425000000000000">
+          <color alpha="156">
+           <red>255</red>
+           <green>132</green>
+           <blue>132</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.440000000000000">
+          <color alpha="80">
+           <red>252</red>
+           <green>128</green>
+           <blue>128</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.507463000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>162</green>
+           <blue>162</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="1.000000000000000">
+          <color alpha="0">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </gradientstop>
+        </gradient>
        </brush>
       </colorrole>
      </active>
      <inactive>
       <colorrole role="Button">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>247</red>
-         <green>225</green>
-         <blue>217</blue>
-        </color>
+       <brush brushstyle="ConicalGradientPattern">
+        <gradient centralx="0.500000000000000" centraly="0.500000000000000" angle="0.000000000000000" type="ConicalGradient" spread="PadSpread" coordinatemode="ObjectBoundingMode">
+         <gradientstop position="0.000000000000000">
+          <color alpha="206">
+           <red>255</red>
+           <green>235</green>
+           <blue>235</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.258706000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>188</green>
+           <blue>188</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.425000000000000">
+          <color alpha="156">
+           <red>255</red>
+           <green>132</green>
+           <blue>132</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.440000000000000">
+          <color alpha="80">
+           <red>252</red>
+           <green>128</green>
+           <blue>128</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.507463000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>162</green>
+           <blue>162</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="1.000000000000000">
+          <color alpha="0">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </gradientstop>
+        </gradient>
        </brush>
       </colorrole>
       <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>247</red>
-         <green>225</green>
-         <blue>217</blue>
-        </color>
+       <brush brushstyle="ConicalGradientPattern">
+        <gradient centralx="0.500000000000000" centraly="0.500000000000000" angle="0.000000000000000" type="ConicalGradient" spread="PadSpread" coordinatemode="ObjectBoundingMode">
+         <gradientstop position="0.000000000000000">
+          <color alpha="206">
+           <red>255</red>
+           <green>235</green>
+           <blue>235</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.258706000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>188</green>
+           <blue>188</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.425000000000000">
+          <color alpha="156">
+           <red>255</red>
+           <green>132</green>
+           <blue>132</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.440000000000000">
+          <color alpha="80">
+           <red>252</red>
+           <green>128</green>
+           <blue>128</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.507463000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>162</green>
+           <blue>162</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="1.000000000000000">
+          <color alpha="0">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </gradientstop>
+        </gradient>
        </brush>
       </colorrole>
       <colorrole role="Window">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>247</red>
-         <green>225</green>
-         <blue>217</blue>
-        </color>
+       <brush brushstyle="ConicalGradientPattern">
+        <gradient centralx="0.500000000000000" centraly="0.500000000000000" angle="0.000000000000000" type="ConicalGradient" spread="PadSpread" coordinatemode="ObjectBoundingMode">
+         <gradientstop position="0.000000000000000">
+          <color alpha="206">
+           <red>255</red>
+           <green>235</green>
+           <blue>235</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.258706000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>188</green>
+           <blue>188</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.425000000000000">
+          <color alpha="156">
+           <red>255</red>
+           <green>132</green>
+           <blue>132</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.440000000000000">
+          <color alpha="80">
+           <red>252</red>
+           <green>128</green>
+           <blue>128</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.507463000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>162</green>
+           <blue>162</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="1.000000000000000">
+          <color alpha="0">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </gradientstop>
+        </gradient>
        </brush>
       </colorrole>
      </inactive>
      <disabled>
       <colorrole role="Button">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>247</red>
-         <green>225</green>
-         <blue>217</blue>
-        </color>
+       <brush brushstyle="ConicalGradientPattern">
+        <gradient centralx="0.500000000000000" centraly="0.500000000000000" angle="0.000000000000000" type="ConicalGradient" spread="PadSpread" coordinatemode="ObjectBoundingMode">
+         <gradientstop position="0.000000000000000">
+          <color alpha="206">
+           <red>255</red>
+           <green>235</green>
+           <blue>235</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.258706000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>188</green>
+           <blue>188</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.425000000000000">
+          <color alpha="156">
+           <red>255</red>
+           <green>132</green>
+           <blue>132</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.440000000000000">
+          <color alpha="80">
+           <red>252</red>
+           <green>128</green>
+           <blue>128</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.507463000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>162</green>
+           <blue>162</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="1.000000000000000">
+          <color alpha="0">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </gradientstop>
+        </gradient>
        </brush>
       </colorrole>
       <colorrole role="Base">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>247</red>
-         <green>225</green>
-         <blue>217</blue>
-        </color>
+       <brush brushstyle="ConicalGradientPattern">
+        <gradient centralx="0.500000000000000" centraly="0.500000000000000" angle="0.000000000000000" type="ConicalGradient" spread="PadSpread" coordinatemode="ObjectBoundingMode">
+         <gradientstop position="0.000000000000000">
+          <color alpha="206">
+           <red>255</red>
+           <green>235</green>
+           <blue>235</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.258706000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>188</green>
+           <blue>188</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.425000000000000">
+          <color alpha="156">
+           <red>255</red>
+           <green>132</green>
+           <blue>132</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.440000000000000">
+          <color alpha="80">
+           <red>252</red>
+           <green>128</green>
+           <blue>128</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.507463000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>162</green>
+           <blue>162</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="1.000000000000000">
+          <color alpha="0">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </gradientstop>
+        </gradient>
        </brush>
       </colorrole>
       <colorrole role="Window">
-       <brush brushstyle="SolidPattern">
-        <color alpha="255">
-         <red>247</red>
-         <green>225</green>
-         <blue>217</blue>
-        </color>
+       <brush brushstyle="ConicalGradientPattern">
+        <gradient centralx="0.500000000000000" centraly="0.500000000000000" angle="0.000000000000000" type="ConicalGradient" spread="PadSpread" coordinatemode="ObjectBoundingMode">
+         <gradientstop position="0.000000000000000">
+          <color alpha="206">
+           <red>255</red>
+           <green>235</green>
+           <blue>235</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.258706000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>188</green>
+           <blue>188</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.425000000000000">
+          <color alpha="156">
+           <red>255</red>
+           <green>132</green>
+           <blue>132</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.440000000000000">
+          <color alpha="80">
+           <red>252</red>
+           <green>128</green>
+           <blue>128</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="0.507463000000000">
+          <color alpha="80">
+           <red>255</red>
+           <green>162</green>
+           <blue>162</blue>
+          </color>
+         </gradientstop>
+         <gradientstop position="1.000000000000000">
+          <color alpha="0">
+           <red>255</red>
+           <green>255</green>
+           <blue>255</blue>
+          </color>
+         </gradientstop>
+        </gradient>
        </brush>
       </colorrole>
      </disabled>
     </palette>
    </property>
    <property name="styleSheet">
-    <string notr="true">
-
-
-
-background-color: rgb(247, 225, 217);</string>
+    <string notr="true">background-color: qconicalgradient(cx:0.5, cy:0.5, angle:0, stop:0 rgba(255, 235, 235, 206), stop:0.258706 rgba(255, 188, 188, 80), stop:0.425 rgba(255, 132, 132, 156), stop:0.44 rgba(252, 128, 128, 80), stop:0.507463 rgba(255, 162, 162, 80), stop:1 rgba(255, 255, 255, 0));</string>
    </property>
    <widget class="QLabel" name="lbl_nueva_cancion">
     <property name="geometry">
