--- a/Proyectos/Project_Music_DB/ventanas/ventana_tabla_listado.ui
+++ b/Proyectos/Project_Music_DB/ventanas/ventana_tabla_listado.ui
@@ -39,9 +39,9 @@
    <widget class="QTableWidget" name="tableWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>10</x>
       <y>90</y>
-      <width>761</width>
+      <width>781</width>
       <height>361</height>
      </rect>
     </property>
@@ -163,6 +163,11 @@
       </disabled>
      </palette>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>8</pointsize>
+     </font>
+    </property>
     <property name="styleSheet">
      <string notr="true">background-color: rgb(255, 255, 255);</string>
     </property>
@@ -178,8 +183,17 @@
     <attribute name="horizontalHeaderVisible">
      <bool>true</bool>
     </attribute>
+    <attribute name="horizontalHeaderMinimumSectionSize">
+     <number>49</number>
+    </attribute>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>115</number>
+    </attribute>
     <attribute name="verticalHeaderVisible">
      <bool>false</bool>
+    </attribute>
+    <attribute name="verticalHeaderDefaultSectionSize">
+     <number>34</number>
     </attribute>
     <column>
      <property name="text">
@@ -187,7 +201,7 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>9</pointsize>
+       <pointsize>8</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -240,6 +254,17 @@
     <column>
      <property name="text">
       <string>ESTILO</string>
+     </property>
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>IMAGEN</string>
      </property>
      <property name="font">
       <font>
